--- a/Use_Case_Customer_Churn.ipynb
+++ b/Use_Case_Customer_Churn.ipynb
@@ -60,6 +60,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# **Note**\n",
+        "\n",
+        "The practical handout is open-source and under [GNU General Public License v3.0](https://www.gnu.org/licenses/gpl-3.0.en.html).\n",
+        "\n",
+        "Please cite my repository/work if you are using any contents written in this practical handout."
+      ],
+      "metadata": {
+        "id": "gzZh5WFLeY4T"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "QZfJb3FOshk2"
       },
