--- a/Use_Case_Titanic.ipynb
+++ b/Use_Case_Titanic.ipynb
@@ -404,7 +404,9 @@
         "\n",
         "LinkedIn: [Yong Poh Yu](https://www.linkedin.com/in/yong-poh-yu/)\n",
         "\n",
-        "Github: [Practical Python Series](https://github.com/richieyuyongpoh/Practical_Python_series)"
+        "Github: [Practical Python Series](https://github.com/richieyuyongpoh/Practical_Python_series)\n",
+        "\n",
+        "Web: https://www.richieyyptutorialpage.com "
       ]
     },
     {
@@ -10369,6 +10371,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "23: Simple Web App Demo:\n",
+        "\n",
+        "https://www.richieyyptutorialpage.com/demo-python-series/titanic-dataset "
+      ],
+      "metadata": {
+        "id": "ezjdiql5HjEV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "23: Challenges\n",
         "\n",
         "What if we don't ignore/remove the missing values? Any other better ways to improve the performance?"
@@ -10386,7 +10399,9 @@
         "\n",
         "LinkedIn: [Yong Poh Yu](https://www.linkedin.com/in/yong-poh-yu/)\n",
         "\n",
-        "Github: [Practical Python Series](https://github.com/richieyuyongpoh/Practical_Python_series)"
+        "Github: [Practical Python Series](https://github.com/richieyuyongpoh/Practical_Python_series)\n",
+        "\n",
+        "Web: https://www.richieyyptutorialpage.com "
       ],
       "metadata": {
         "id": "l5hjiNuiGa8M"
